/**
 * Test de partie complete: le moteur pur, de bout en bout.
 *
 * C'est le test demande par la fiche de l'etape 1.5, et c'est le seul du paquet
 * qui ne regarde aucun systeme en particulier. Il fait tourner une partie entiere
 * avec des joueurs, des bots, des bots noirs, des bonus, des malus et des zones,
 * puis compare un resume de l'etat final a un instantane de reference.
 *
 * POURQUOI UN RESUME PLUTOT QUE L'ETAT ENTIER. Un etat de fin de partie contient
 * une trentaine de bots avec leurs caps et leurs compteurs: un instantane brut
 * ferait plusieurs centaines de lignes que personne ne relirait, et le moindre
 * changement le rendrait illisible. Le resume ci-dessous tient sur un ecran et
 * dit ce qui compte. Il contient surtout l'etat du generateur a graine, qui suffit
 * a detecter toute divergence: deux parties qui n'auraient pas fait exactement les
 * memes tirages, dans le meme ordre, ne peuvent pas y arriver avec le meme
 * nombre.
 *
 * QUE FAIRE QUAND CET INSTANTANE CHANGE. Il ne doit changer que si le gameplay
 * change. Le voir bouger apres une modification censee ne rien changer est le
 * signal d'une regression, pas d'un instantane a mettre a jour.
 */

import type { ReglagesPartiels, Vecteur } from '@neon-ninja/shared';
import { describe, expect, it } from 'vitest';

import { peuplerDeBots } from './bots.js';
import type { EtatPartie, EvenementPartie } from './etat.js';
import { ajouterJoueur, creerEtatInitial } from './etat.js';
import type { Entrees } from './moteur.js';
import { evaluerFinDePartie, lancerLaPartie, tick } from './moteur.js';
import { calculerScores } from './score.js';

/** Cadence de reference du serveur, en millisecondes. */
const BATTEMENT_MS = 50;

/**
 * Une partie d'une minute: assez pour que les bots noirs entrent en jeu a mi-parcours.
 *
 * SANS L'EVADE (etape 7.9): cette partie de reference est celle d'avant l'etape, et son
 * instantane n'a pas bouge, ce qui prouve que rien d'autre n'a change. La partie avec
 * l'Evade a sa propre reference, plus bas.
 *
 * SANS LA FUMEE (etape 7.10), pour la meme raison: les deux references d'avant restent
 * identiques, et la partie avec la fumee a la sienne. SANS LA MINE (etape 7.11) non plus.
 *
 * LES ZONES, ELLES, RESTENT EN JEU, comme par defaut: depuis l'etape 7.12, elles s'ouvrent sur
 * des mines de zone, et toutes les references ont change, ce changement de regle etant voulu.
 * La carte y pose ses mines au rythme par defaut; les joueurs n'en arment aucune a la graine
 * 42, d'ou une reference a part, a une graine ou une zone s'ouvre.
 */
const REGLAGES: ReglagesPartiels = {
  dureePartieS: 60,
  nombreBotsInitial: 30,
  evade: false,
  objetsDePoche: { fumee: { actif: false }, mine: { actif: false } },
};

/** La meme partie, l'Evade en jeu (etape 7.9). */
const AVEC_L_EVADE: ReglagesPartiels = { ...REGLAGES, evade: true };

/** La meme partie, la fumee en jeu et frequente (etape 7.10). */
const AVEC_LA_FUMEE: ReglagesPartiels = {
  ...REGLAGES,
  objetsDePoche: { fumee: { actif: true, tauxApparitionPourCent: 60 }, mine: { actif: false } },
};

/** La meme partie, la mine en jeu et frequente (etape 7.11). */
const AVEC_LA_MINE: ReglagesPartiels = {
  ...REGLAGES,
  objetsDePoche: { fumee: { actif: false }, mine: { actif: true, tauxApparitionPourCent: 60 } },
};

/**
 * La graine des parties avec la fumee et avec la mine. Depuis l'etape 7.12, les mines de zone
 * tirent autrement que les zones d'avant, et a la graine 42 plus aucun joueur ne passe sur un
 * objet de poche: ces references ne prouveraient plus rien.
 */
const GRAINE_DE_LA_POCHE = 52;

/** Une graine ou un joueur arme une mine de zone et ouvre sa zone (etape 7.12). */
const GRAINE_DES_ZONES = 62;

/** Tous les combien de battements chaque joueur se sert de sa poche, dans cette partie. */
const CADENCE_DE_LA_POCHE = 40;

/** Nombre de battements pour couvrir la partie entiere. */
const BATTEMENTS = (60 * 1000) / BATTEMENT_MS;

/** Une partie prete a jouer: trois joueurs places, trente bots semes. */
function partiePrete(graine = 42, reglages: ReglagesPartiels = REGLAGES): EtatPartie {
  let etat = creerEtatInitial({ graine, reglages });

  etat = ajouterJoueur(etat, { id: 'alice', pseudo: 'Alice', position: { x: 400, y: 400 } });
  etat = ajouterJoueur(etat, { id: 'bob', pseudo: 'Bob', position: { x: 1200, y: 900 } });
  etat = ajouterJoueur(etat, { id: 'chloe', pseudo: 'Chloe', position: { x: 800, y: 1100 } });

  return peuplerDeBots(etat);
}

/**
 * Ce que les joueurs demandent au battement donne.
 *
 * Chacun tourne sur un cercle, a une vitesse angulaire differente: c'est une
 * facon simple de leur faire parcourir la carte, se croiser et rencontrer des
 * bots, sans avoir a ecrire un scenario a la main.
 */
function entreesDu(battement: number, avecLaPoche = false): Entrees {
  const surUnCercle = (periode: number, dephasage: number): Vecteur => {
    const angle = (2 * Math.PI * battement) / periode + dephasage;

    return { x: Math.cos(angle), y: Math.sin(angle) };
  };
  // Chacun se sert de sa poche a son tour, a des battements fixes (etape 7.10).
  const poche = (rang: number): { readonly utiliserLaPoche?: true } =>
    avecLaPoche && battement % CADENCE_DE_LA_POCHE === rang ? { utiliserLaPoche: true } : {};

  return {
    alice: { deplacement: surUnCercle(120, 0), enMouvement: true, ...poche(1) },
    bob: { deplacement: surUnCercle(200, Math.PI / 3), enMouvement: true, ...poche(2) },
    chloe: { deplacement: surUnCercle(90, Math.PI), enMouvement: true, ...poche(3) },
  };
}

/** Joue la partie du debut a la fin, en accumulant tout ce qui s'y est passe. */
function jouerLaPartie(
  graine = 42,
  reglages: ReglagesPartiels = REGLAGES,
  avecLaPoche = false,
): {
  readonly etat: EtatPartie;
  readonly evenements: readonly EvenementPartie[];
} {
  // Lancee comme le serveur la lance: depuis l'etape 7.5, c'est ce qui donne ses combos a
  // la Horde.
  let etat = lancerLaPartie(partiePrete(graine, reglages));
  const evenements: EvenementPartie[] = [];

  for (let battement = 0; battement < BATTEMENTS; battement += 1) {
    etat = tick(etat, entreesDu(battement, avecLaPoche), BATTEMENT_MS);
    evenements.push(...etat.evenements);
  }

  return { etat, evenements };
}

/** Combien de fois chaque nature d'evenement s'est produite. */
function comptesParType(evenements: readonly EvenementPartie[]): Record<string, number> {
  const comptes: Record<string, number> = {};

  for (const evenement of evenements) {
    comptes[evenement.type] = (comptes[evenement.type] ?? 0) + 1;
  }

  return comptes;
}

/** Le resume de l'etat final soumis a l'instantane. Voir l'explication en tete de fichier. */
function resume(etat: EtatPartie, evenements: readonly EvenementPartie[]): unknown {
  const arrondi = (valeur: number): number => Math.round(valeur * 100) / 100;

  return {
    tick: etat.tick,
    tempsEcouleMs: etat.tempsEcouleMs,
    partieTerminee: evaluerFinDePartie(etat).terminee,
    // L'empreinte la plus sure: elle ne peut coincider que si tous les tirages
    // de la partie ont ete faits dans le meme ordre.
    alea: etat.alea.etat,
    compteurIdentifiants: etat.compteurIdentifiants,
    classement: calculerScores(etat).map((ligne) => ({
      id: ligne.id,
      points: ligne.points,
      botsPortes: ligne.botsPortes,
      captures: ligne.captures,
      botsNoirsDetruits: ligne.botsNoirsDetruits,
    })),
    positions: Object.fromEntries(
      Object.values(etat.joueurs).map((joueur) => [
        joueur.id,
        { x: arrondi(joueur.position.x), y: arrondi(joueur.position.y) },
      ]),
    ),
    capturesParBotNoirSubies: Object.fromEntries(
      Object.values(etat.joueurs).map((joueur) => [joueur.id, joueur.capturesParBotNoirSubies]),
    ),
    bots: {
      total: Object.keys(etat.bots).length,
      ordinaires: Object.values(etat.bots).filter((bot) => bot.type === 'bot').length,
      noirs: Object.values(etat.bots).filter((bot) => bot.type === 'botNoir').length,
    },
    objetsPoses: Object.values(etat.objets).length,
    zonesActives: Object.values(etat.zones).map((zone) => zone.type),
    evenements: comptesParType(evenements),
  };
}

describe('partie complete', () => {
  it('produit l instantane de reference apres une minute de jeu', () => {
    const partie = jouerLaPartie();

    expect(resume(partie.etat, partie.evenements)).toMatchSnapshot();
  });

  it('produit l instantane de reference d une partie avec l Evade (etape 7.9)', () => {
    const partie = jouerLaPartie(42, AVEC_L_EVADE);
    const evade = partie.etat.evade;

    expect({
      ...(resume(partie.etat, partie.evenements) as object),
      evade: {
        apparitionMs: evade?.apparitionMs,
        passe: evade?.passe,
        porteur: evade?.porteur,
        present: evade?.surLaCarte !== undefined,
      },
      doubleurs: calculerScores(partie.etat)
        .filter((ligne) => ligne.doubleur)
        .map((ligne) => ligne.id),
    }).toMatchSnapshot();
  });

  it('produit l instantane de reference d une partie avec la fumee (etape 7.10)', () => {
    const partie = jouerLaPartie(GRAINE_DE_LA_POCHE, AVEC_LA_FUMEE, true);

    // La fumee a vraiment ete ramassee et utilisee: sinon la reference ne prouverait rien.
    expect(partie.evenements.some((fait) => fait.type === 'objetEmpoche')).toBe(true);
    expect(partie.evenements.some((fait) => fait.type === 'fumee')).toBe(true);
    expect({
      ...(resume(partie.etat, partie.evenements) as object),
      poches: Object.fromEntries(
        Object.values(partie.etat.joueurs).map((joueur) => [joueur.id, joueur.poche ?? null]),
      ),
    }).toMatchSnapshot();
  });

  it('produit l instantane de reference d une partie avec la mine (etape 7.11)', () => {
    const partie = jouerLaPartie(GRAINE_DE_LA_POCHE, AVEC_LA_MINE, true);

    // Des mines ont vraiment ete posees, armees, et ont saute: sinon la reference ne prouverait
    // rien.
    expect(partie.evenements.some((fait) => fait.type === 'minePosee')).toBe(true);
    expect(partie.evenements.some((fait) => fait.type === 'mineArmee')).toBe(true);
    expect(partie.evenements.some((fait) => fait.type === 'mineExplosee')).toBe(true);
    expect({
      ...(resume(partie.etat, partie.evenements) as object),
      minesPosees: Object.values(partie.etat.minesPosees ?? {}).map((mine) => ({
        poseur: mine.poseur,
        armee: mine.avantExplosionMs !== undefined,
      })),
      touches: partie.evenements.flatMap((fait) =>
        fait.type === 'mineExplosee' ? fait.touches : [],
      ),
    }).toMatchSnapshot();
  });

  it('produit l instantane de reference d une partie ou une zone s ouvre (etape 7.12)', () => {
    const partie = jouerLaPartie(GRAINE_DES_ZONES);

    // Une mine de zone a vraiment ete posee, armee, et sa zone ouverte.
    expect(partie.evenements.some((fait) => fait.type === 'mineDeZonePosee')).toBe(true);
    expect(partie.evenements.some((fait) => fait.type === 'mineDeZoneArmee')).toBe(true);
    expect(partie.evenements.some((fait) => fait.type === 'zoneOuverte')).toBe(true);
    expect({
      ...(resume(partie.etat, partie.evenements) as object),
      minesDeZone: Object.values(partie.etat.minesDeZone ?? {}).map((mine) => ({
        nature: mine.nature,
        armee: mine.avantOuvertureMs !== undefined,
      })),
      zonesOuvertes: partie.evenements.flatMap((fait) =>
        fait.type === 'zoneOuverte' ? [{ nature: fait.nature, position: fait.position }] : [],
      ),
    }).toMatchSnapshot();
  });

  it('rejoue exactement la meme partie a graine et entrees egales', () => {
    expect(jouerLaPartie().etat).toEqual(jouerLaPartie().etat);
  });

  it('produit une partie differente avec une autre graine', () => {
    expect(jouerLaPartie(42).etat).not.toEqual(jouerLaPartie(43).etat);
  });

  it('garde une population de bots ordinaires constante, defaut X12', () => {
    const partie = jouerLaPartie();
    const ordinaires = Object.values(partie.etat.bots).filter((bot) => bot.type === 'bot');

    // Le legacy creait un bot blanc par bot repeint a chaque capture par un bot
    // noir: sa population derivait a la hausse pendant toute la partie.
    expect(ordinaires).toHaveLength(30);
  });

  it('laisse chaque entite sur une case praticable, du debut a la fin', () => {
    const { etat } = jouerLaPartie();
    const dansLaCarte = (position: { x: number; y: number }): boolean =>
      position.x >= 0 &&
      position.x <= etat.carte.largeur &&
      position.y >= 0 &&
      position.y <= etat.carte.hauteur;

    expect(Object.values(etat.joueurs).every((joueur) => dansLaCarte(joueur.position))).toBe(true);
    expect(Object.values(etat.bots).every((bot) => dansLaCarte(bot.position))).toBe(true);
  });

  it('fait entrer les bots noirs a mi-partie, et pas avant', () => {
    let etat = partiePrete();
    const botsNoirs = (): number =>
      Object.values(etat.bots).filter((bot) => bot.type === 'botNoir').length;

    for (let battement = 0; battement < BATTEMENTS / 2 - 1; battement += 1) {
      etat = tick(etat, entreesDu(battement), BATTEMENT_MS);
    }
    expect(botsNoirs()).toBe(0);

    etat = tick(etat, entreesDu(0), BATTEMENT_MS);
    expect(botsNoirs()).toBe(2);
  });

  it('fait vivre les objets et les zones tout du long', () => {
    let etat = lancerLaPartie(partiePrete(GRAINE_DES_ZONES));
    let objetsVus = 0;
    let zonesVues = 0;
    let minesDeZoneVues = 0;

    for (let battement = 0; battement < BATTEMENTS; battement += 1) {
      etat = tick(etat, entreesDu(battement), BATTEMENT_MS);
      objetsVus = Math.max(objetsVus, Object.keys(etat.objets).length);
      zonesVues = Math.max(zonesVues, Object.keys(etat.zones).length);
      minesDeZoneVues = Math.max(minesDeZoneVues, Object.keys(etat.minesDeZone ?? {}).length);
    }

    // Les objets apparaissent toutes les quatre secondes environ et vivent huit
    // secondes: il y en a forcement plusieurs sur la carte en meme temps a un
    // moment ou a un autre. N'en voir aucun signalerait des apparitions muettes.
    expect(objetsVus).toBeGreaterThan(1);
    // Les zones s'ouvrent sur les mines de zone que les joueurs arment en passant (etape 7.12).
    expect(minesDeZoneVues).toBeGreaterThan(1);
    expect(zonesVues).toBeGreaterThan(0);
  });

  it('n avance plus une fois la partie terminee', () => {
    const { etat } = jouerLaPartie();

    expect(tick(etat, entreesDu(0), BATTEMENT_MS)).toBe(etat);
  });
});
